--- a/admin/index.html
+++ b/admin/index.html
@@ -13,5 +13,5 @@
     <!-- Include the script that builds the page and powers Netlify CMS -->
     <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
   </body>
-  <link rel="stylesheet" href="../assets/css/admin.css" />
+  <link rel="stylesheet" href="/assets/css/admin.css" />
 </html>
