--- a/index.html
+++ b/index.html
@@ -3,20 +3,138 @@ layout: default
 title: Human Connection
 ---
 
-{% include nav.html %}
 <div class="container">
-  {% for member in site.team_members %}
-  <div class="card {{member.bg_color}}">
-    <div class="card-image">
-      <img src="{{member.photo_url}}" alt="{{member.photo_description}}" />
+  <main>
+    <div class="landing">
+      <div class="landing-content">
+        <h1>{{site.data.home.slogan}}</h1>
+        <p>{{site.data.home.landing-tekt}}</p>
+      </div>
+      <div class="landing-image">
+        <img src="parachutist" alt="" />
+      </div>
     </div>
-    <div class="card-content">
-      <p class="bold">{{member.name}}</p>
-      <p><i class="fa fa-envelope" aria-hidden="true"></i> {{member.email}}</p>
-      <p>
-        <i class="fa-solid fa-mobile-screen-button"></i> {{member.phonenumber}}
-      </p>
+    <div class="vision">
+      <h2>{{site.data.home.waar-wij-voor-staan}}</h2>
+      <p>{{site.data.home.waar-wijvoor-staan-tekst}}</p>
     </div>
-  </div>
-  {% endfor %}
+    <div class="wijzijn">
+      <div>
+        <img src="{{site.data.home.waarde-1-afbeelding}}" alt="" />
+        <p>{{site.data.home.waarde-1-titel}}</p>
+        <p>{{site.data.home.waarde-1-tekst}}</p>
+      </div>
+      <div>
+        <img src="{{site.data.home.waarde-2-afbeelding}}" alt="" />
+        <p>{{site.data.home.waarde-2-titel}}</p>
+        <p>{{site.data.home.waarde-2-tekst}}</p>
+      </div>
+      <div>
+        <img src="{{site.data.home.waarde-3-afbeelding}}" alt="" />
+        <p>{{site.data.home.waarde-3-titel}}</p>
+        <p>{{site.data.home.waarde-3-tekst}}</p>
+      </div>
+    </div>
+    <div class="watwijdoen">
+      <h2>{{site.data.home.wat-wij-doen}}</h2>
+      <p>{{site.data.home.wat-wij-doen-tekst}}</p>
+    </div>
+    <div class="watwijdoenopsomming">
+      <div>
+        <p>{{site.data.home.wat-wij-doen-1-titel}}</p>
+        <p>{{site.data.home.wat-wij-doen-1-tekst}}</p>
+        <p>{{site.data.home.wat-wij-doen-1-contact}}</p>
+        <p>{{site.data.home.wat-wij-doen-1-button}}</p>
+      </div>
+      <div>
+        <p>{{site.data.home.wat-wij-doen-2-titel}}</p>
+        <p>{{site.data.home.wat-wij-doen-2-tekst}}</p>
+        <p>{{site.data.home.wat-wij-doen-2-contact}}</p>
+        <p>{{site.data.home.wat-wij-doen-2-button}}</p>
+      </div>
+      <div>
+        <p>{{site.data.home.wat-wij-doen-3-titel}}</p>
+        <p>{{site.data.home.wat-wij-doen-3-tekst}}</p>
+        <p>{{site.data.home.wat-wij-doen-3-contact}}</p>
+        <p>{{site.data.home.wat-wij-doen-3-button}}</p>
+      </div>
+      <p>{{site.data.home.hoe-wij-werken}}</p>
+    </div>
+
+    <h2>{{site.data.home.wie-wij-zijn}}</h2>
+    {% for member in site.team %}
+    <div class="card {{member.bg_color}}">
+      <div class="card-image">
+        <img src="{{member.photo_url}}" alt="{{member.photo_description}}" />
+      </div>
+      <div class="card-content">
+        <p class="bold">{{member.name}}</p>
+        <p>
+          <i class="fa fa-envelope" aria-hidden="true"></i> {{member.email}}
+        </p>
+        <p>
+          <i class="fa-solid fa-mobile-screen-button"></i>
+          {{member.phonenumber}}
+        </p>
+      </div>
+    </div>
+    {% endfor %}
+
+    <div class="actievraag">
+      <div class="actievraag-content">
+        <h2>{{site.data.home.actievraag}}</h2>
+        <p>{{site.data.home.actievraag-subtitel}}</p>
+        <p>{{site.data.home.actievraag-button}}</p>
+      </div>
+      <div class="actie-image">
+        <img src="vraagtekens" alt="" />
+      </div>
+    </div>
+    <div class="partners">
+      <h2>{{site.data.home.partners-titel}}</h2>
+      <!-- Build Slider -->
+      {% for logo in site.data.home.logos %}
+      <img src="{{logo.logo-bedrijf}}" alt="" />
+      {% endfor %}
+    </div>
+
+    <!-- Slider main container -->
+    <div class="swiper">
+      <!-- Additional required wrapper -->
+      <div class="swiper-wrapper">
+        <!-- Slides -->
+        <div class="swiper-slide">
+          <img src="{{site.data.home.waarde-1-afbeelding}}" alt="" />
+        </div>
+        <div class="swiper-slide">
+          <img src="{{site.data.home.waarde-1-afbeelding}}" alt="" />
+        </div>
+        <div class="swiper-slide">
+          <img src="{{site.data.home.waarde-1-afbeelding}}" alt="" />
+        </div>
+        <div class="swiper-slide">
+          <img src="{{site.data.home.waarde-1-afbeelding}}" alt="" />
+        </div>
+        <div class="swiper-slide">
+          <img src="{{site.data.home.waarde-1-afbeelding}}" alt="" />
+        </div>
+        <div class="swiper-slide">
+          <img src="{{site.data.home.waarde-1-afbeelding}}" alt="" />
+        </div>
+        <div class="swiper-slide">
+          <img src="{{site.data.home.waarde-1-afbeelding}}" alt="" />
+        </div>
+        <div class="swiper-slide">
+          <img src="{{site.data.home.waarde-1-afbeelding}}" alt="" />
+        </div>
+      </div>
+      <!-- If we need pagination -->
+      <div class="swiper-pagination"></div>
+
+      <!-- If we need navigation buttons -->
+      <div class="swiper-button-prev"></div>
+      <div class="swiper-button-next"></div>
+    </div>
+    <div class="contact">Contact Form</div>
+  </main>
 </div>
