--- a/index.html
+++ b/index.html
@@ -6,12 +6,17 @@ title: Human Connection
 <div class="container">
   <main>
     <div class="landing">
-      <div class="landing-content">
-        <h1>{{site.data.home.slogan}}</h1>
-        <p>{{site.data.home.landing-tekt}}</p>
+      <div class="innercontainer">
+        <div class="landing-content">
+          <h1>{{site.data.home.slogan}}</h1>
+          <p>{{site.data.home.landing-tekt | markdownify}}</p>
+        </div>
       </div>
       <div class="landing-image">
-        <img src="parachutist" alt="" />
+        <img
+          src="assets/images/upload/depositphotos_106363032-stock-photo-silhouette-of-sky-diver-flies.jpg"
+          alt=""
+        />
       </div>
     </div>
     <div class="vision">
@@ -87,7 +92,7 @@ title: Human Connection
         <p>{{site.data.home.actievraag-button}}</p>
       </div>
       <div class="actie-image">
-        <img src="vraagtekens" alt="" />
+        <!-- <img src="vraagtekens" alt="" /> -->
       </div>
     </div>
     <div class="partners">
