--- a/index.html
+++ b/index.html
@@ -151,16 +151,16 @@ title: Human Connection
 
         <form name="contact" netlify>
           <p>
-            <label>Naam <input type="text" name="name" /></label>
+            <label>Naam <input type="text" name="naam" /></label>
           </p>
           <p>
-            <label>Onderwerp <input type="text" name="subject" /></label>
+            <label>Onderwerp <input type="text" name="onderwerp" /></label>
           </p>
           <p>
             <label>Email <input type="email" name="email" /></label>
           </p>
           <p>
-            <label>Bericht <input type="textarea" name="name" /></label>
+            <label>Bericht <input type="textarea" name="bericht" /></label>
           </p>
           <p>
             <button type="submit">Send</button>
