--- a/index.html
+++ b/index.html
@@ -155,25 +155,27 @@ title: Human Connection
         <p>{{site.data.home.contact-omschrijving}}</p>
 
         <form name="contact" netlify>
-          <p>
-            <label>Naam <input type="text" name="naam" /></label>
-          </p>
-          <p>
-            <label>Onderwerp <input type="text" name="onderwerp" /></label>
-          </p>
-          <p>
-            <label>Email <input type="email" name="email" /></label>
-          </p>
-          <p>
-            <label
-              >Vraag/Bericht <input type="textarea" name="bericht"
-            /></label>
-          </p>
+          <div class="did-floating-label-content">
+            <input class="did-floating-input" type="text" name="naam" placeholder=" ">
+            <label class="did-floating-label">Naam</label>
+          </div>
+          <div class="did-floating-label-content">
+            <input class="did-floating-input" type="text" name="onderwerp" placeholder=" ">
+            <label class="did-floating-label">Onderwerp</label>
+          </div>
+          <div class="did-floating-label-content">
+            <input class="did-floating-input" type="email" name="email" placeholder=" ">
+            <label class="did-floating-label">Email</label>
+          </div>
+          <div class="did-floating-label-content">
+            <input class="did-floating-input" type="textarea" name="bericht" placeholder=" ">
+            <label class="did-floating-label">Vraag/Bericht</label>
+          </div>
+  
           <p>
             <button type="submit">Verzend bericht</button>
           </p>
         </form>
-      </div>
     </div>
   </main>
 </div>
