changed form stuff

--- a/index.html
+++ b/index.html
@@ -168,13 +168,13 @@ title: Human Connection
             <label class="did-floating-label">Email</label>
           </div>
           <div class="did-floating-label-content">
-            <input class="did-floating-input" type="textarea" name="bericht" placeholder=" ">
+            <textarea id="bericht" rows="6" cols="50" class="did-floating-input" name="bericht" placeholder=" "></textarea>
             <label class="did-floating-label">Vraag/Bericht</label>
           </div>
   
-          <p>
+
             <button type="submit">Verzend bericht</button>
-          </p>
+        
         </form>
     </div>
   </main>
