--- a/index.html
+++ b/index.html
@@ -176,6 +176,11 @@ title: Human Connection
             <button type="submit">Verzend bericht</button>
         
         </form>
+        <p>{{site.data.home.uitnodiging}}</p>
+        <p>{{site.data.home.adres}}</p>
+        <p>{{site.data.home.postcode}}</p>
+        <img src="{{site.data.home.afbeelding-kantoor}}" alt="">
+      
     </div>
   </main>
 </div>
