--- a/index.html
+++ b/index.html
@@ -25,36 +25,36 @@ title: Human Connection
 
     <div class="vision">
       <h2>{{site.data.home.waar-wij-voor-staan}}</h2>
-      <p>{{site.data.home.waar-wijvoor-staan-tekst}}</p>
+      <p>{{site.data.home.waar-wijvoor-staan-tekst | markdownify}}</p>
     </div>
     <div class="wijzijn">
       <div class="innercontainer">
         <div class="waardes">
           <img src="{{site.data.home.waarde-1-afbeelding}}" alt="" />
           <h3>{{site.data.home.waarde-1-titel}}</h3>
-          <p>{{site.data.home.waarde-1-tekst}}</p>
+          <p>{{site.data.home.waarde-1-tekst | markdownify}}</p>
         </div>
         <div class="waardes">
           <img src="{{site.data.home.waarde-2-afbeelding}}" alt="" />
           <h3>{{site.data.home.waarde-2-titel}}</h3>
-          <p>{{site.data.home.waarde-2-tekst}}</p>
+          <p>{{site.data.home.waarde-2-tekst | markdownify}}</p>
         </div>
         <div class="waardes">
           <img src="{{site.data.home.waarde-3-afbeelding}}" alt="" />
           <h3>{{site.data.home.waarde-3-titel}}</h3>
-          <p>{{site.data.home.waarde-3-tekst}}</p>
+          <p>{{site.data.home.waarde-3-tekst | markdownify}}</p>
         </div>
       </div>
     </div>
     <div class="watwijdoen">
       <h2>{{site.data.home.wat-wij-doen}}</h2>
-      <p>{{site.data.home.wat-wij-doen-tekst}}</p>
+      <p>{{site.data.home.wat-wij-doen-tekst | markdownify}}</p>
     </div>
     <div class="innercontainer">
       <div class="watwijdoenopsomming">
         <div>
           <h3 class="wwdfirstitem">{{site.data.home.wat-wij-doen-1-titel}}</h3>
-          <p>{{site.data.home.wat-wij-doen-1-tekst}}</p>
+          <p>{{site.data.home.wat-wij-doen-1-tekst | markdownify}}</p>
           <p>{{site.data.home.wat-wij-doen-1-contact | markdownify}}</p>
           <p class="btn btn-outline">
             <a href="#">{{site.data.home.wat-wij-doen-1-button}}</a>
@@ -62,7 +62,7 @@ title: Human Connection
         </div>
         <div>
           <h3>{{site.data.home.wat-wij-doen-2-titel}}</h3>
-          <p>{{site.data.home.wat-wij-doen-2-tekst}}</p>
+          <p>{{site.data.home.wat-wij-doen-2-tekst | markdownify}}</p>
           <p>{{site.data.home.wat-wij-doen-2-contact | markdownify}}</p>
           <p class="btn btn-outline">
             <a href="#">{{site.data.home.wat-wij-doen-2-button}}</a>
@@ -70,7 +70,7 @@ title: Human Connection
         </div>
         <div>
           <h3>{{site.data.home.wat-wij-doen-3-titel}}</h3>
-          <p>{{site.data.home.wat-wij-doen-3-tekst}}</p>
+          <p>{{site.data.home.wat-wij-doen-3-tekst | markdownify}}</p>
           <p>{{site.data.home.wat-wij-doen-3-contact | markdownify}}</p>
           <p class="btn btn-outline">
             <a href="">{{site.data.home.wat-wij-doen-3-button}}</a>
