--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ title: Human Connection
           src="assets/images/upload/parachute.jpg"
           alt=""
         />
-        {% include svg1.html %}
+        {% comment %} {% include svg1.html %} {% endcomment %}
       </div>
     </div>
 
@@ -105,7 +105,7 @@ title: Human Connection
           src="/assets/images/upload/vraagtekens.jpg"
           alt=""
         />
-        {% include svg2.html %}
+        {% comment %}{% include svg2.html %}{% endcomment %}
       </div>
     </div>
     <div class="partners">
