--- a/index.html
+++ b/index.html
@@ -81,10 +81,12 @@ title: Human Connection
         </p>
       </div>
 
-      <h2 class="wiewijzijntitle">{{site.data.home.wie-wij-zijn}}</h2>
-      <p class="btn btn-full center">
-        <a href="#">Meet the Team</a>
-      </p>
+      <div class="wiewijzijn">
+        <h2 class="wiewijzijntitle">{{site.data.home.wie-wij-zijn}}</h2>
+        <p class="btn btn-full center">
+          <a href="#">Meet the Team</a>
+        </p>
+      </div>
     </div>
 
     <div class="actievraag">
