added button up

--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@ title: Human Connection
 
 <div class="container">
   <main>
+    {% include button-omhoog.html %}
     <div class="landing">
       <div class="innercontainer">
         <div class="landing-content">
           <h1>{{site.data.home.slogan}}</h1>
-          <p>{{site.data.home.landing-tekt | markdownify}}</p>
+          {{site.data.home.landing-tekt | markdownify}}
         </div>
       </div>
 
@@ -25,53 +26,53 @@ title: Human Connection
 
     <div class="vision">
       <h2>{{site.data.home.waar-wij-voor-staan}}</h2>
-      <p>{{site.data.home.waar-wijvoor-staan-tekst | markdownify}}</p>
+      {{site.data.home.waar-wijvoor-staan-tekst | markdownify}}
     </div>
     <div class="wijzijn">
       <div class="innercontainer">
         <div class="waardes">
           <img src="{{site.data.home.waarde-1-afbeelding}}" alt="" />
           <h3>{{site.data.home.waarde-1-titel}}</h3>
-          <p>{{site.data.home.waarde-1-tekst | markdownify}}</p>
+          {{site.data.home.waarde-1-tekst | markdownify}}
         </div>
         <div class="waardes">
           <img src="{{site.data.home.waarde-2-afbeelding}}" alt="" />
           <h3>{{site.data.home.waarde-2-titel}}</h3>
-          <p>{{site.data.home.waarde-2-tekst | markdownify}}</p>
+          {{site.data.home.waarde-2-tekst | markdownify}}
         </div>
         <div class="waardes">
           <img src="{{site.data.home.waarde-3-afbeelding}}" alt="" />
           <h3>{{site.data.home.waarde-3-titel}}</h3>
-          <p>{{site.data.home.waarde-3-tekst | markdownify}}</p>
+          {{site.data.home.waarde-3-tekst | markdownify}}
         </div>
       </div>
     </div>
     <div class="watwijdoen">
       <h2>{{site.data.home.wat-wij-doen}}</h2>
-      <p>{{site.data.home.wat-wij-doen-tekst | markdownify}}</p>
+      {{site.data.home.wat-wij-doen-tekst | markdownify}}
     </div>
     <div class="innercontainer">
       <div class="watwijdoenopsomming">
         <div>
           <h3 class="wwdfirstitem">{{site.data.home.wat-wij-doen-1-titel}}</h3>
-          <p>{{site.data.home.wat-wij-doen-1-tekst | markdownify}}</p>
-          <p>{{site.data.home.wat-wij-doen-1-contact | markdownify}}</p>
+          {{site.data.home.wat-wij-doen-1-tekst | markdownify}}
+          {{site.data.home.wat-wij-doen-1-contact | markdownify}}
           <p class="btn btn-outline">
             <a href="#">{{site.data.home.wat-wij-doen-1-button}}</a>
           </p>
         </div>
         <div>
           <h3>{{site.data.home.wat-wij-doen-2-titel}}</h3>
-          <p>{{site.data.home.wat-wij-doen-2-tekst | markdownify}}</p>
-          <p>{{site.data.home.wat-wij-doen-2-contact | markdownify}}</p>
+          {{site.data.home.wat-wij-doen-2-tekst | markdownify}}
+          {{site.data.home.wat-wij-doen-2-contact | markdownify}}
           <p class="btn btn-outline">
             <a href="#">{{site.data.home.wat-wij-doen-2-button}}</a>
           </p>
         </div>
         <div>
           <h3>{{site.data.home.wat-wij-doen-3-titel}}</h3>
-          <p>{{site.data.home.wat-wij-doen-3-tekst | markdownify}}</p>
-          <p>{{site.data.home.wat-wij-doen-3-contact | markdownify}}</p>
+          {{site.data.home.wat-wij-doen-3-tekst | markdownify}}
+          {{site.data.home.wat-wij-doen-3-contact | markdownify}}
           <p class="btn btn-outline">
             <a href="">{{site.data.home.wat-wij-doen-3-button}}</a>
           </p>
