made mouse-overs

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ title: Human Connection
               ></textarea>
               <label class="did-floating-label">Vraag/Bericht</label>
             </div>
-            <button type="submit">Verzend bericht</button>
+            <button type="submit" class="btn btn-full">Verzend bericht</button>
           </form>
         </div>
         <div class="contact-info">
