--- a/werken-bij.html
+++ b/werken-bij.html
@@ -16,7 +16,7 @@ title: Werken bij
     <div class="img-overlay-wrap">
       <img
         class="landing-image"
-        src="/assets/images/upload/parachute.jpg"
+        src="{{site.data.werken-bij.afbeelding}}"
         alt=""
       />
       {% include svg1-lightblue.html %} {% include svg1-desktop-lightblue.html
