added hoe wij werken to cms

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ title: Human Connection
       {% include birthday.html %}
       <img
         class="landing-image"
-        src="/assets/images/upload/parachute.jpg"
+        src="{{site.data.home.pagina-afbeelding}}"
         alt=""
       />
       {% include svg1.html %} {% include svg1-desktop.html %}
