--- a/hoe-wij-werken.html
+++ b/hoe-wij-werken.html
@@ -16,7 +16,7 @@ title: Hoe wij werken
     <div class="img-overlay-wrap">
       <img
         class="landing-image"
-        src="{{site.data.werken-bij-ons.afbeelding}}"
+        src="{{site.data.werken-bij-ons.pagina-afbeelding}}"
         alt=""
       />
       {% include svg1-lightblue.html %} {% include svg1-desktop-lightblue.html
