--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@ title: Contact
 <main class="page-contact">
   <div class="contact">
     <div class="innercontainer">
-      <h2>{{site.data.home.contact-titel}}</h2>
+      <h2 class="margin-top-2">{{site.data.home.contact-titel}}</h2>
       <div class="contact-flex">
         <div class="contact-left">
           <p>{{site.data.home.contact-omschrijving}}</p>
