--- a/hoe-wij-werken.html
+++ b/hoe-wij-werken.html
@@ -28,21 +28,35 @@ title: Hoe wij werken
     {{site.data.hoe-wij-werken.waar-wijvoor-staan-tekst | markdownify}}
   </div>
   <div class="wijzijn">
-    <div class="innercontainer wijzijn-flex">
-      <div class="waardes">
-        <img src="{{site.data.hoe-wij-werken.waarde-1-afbeelding}}" alt="" />
-        <h3>{{site.data.hoe-wij-werken.waarde-1-titel}}</h3>
-        {{site.data.hoe-wij-werken.waarde-1-tekst | markdownify}}
+    <div class="innercontainer">
+      <div class="wijzijn-flex">
+        <div class="waardes">
+          <img src="{{site.data.hoe-wij-werken.waarde-1-afbeelding}}" alt="" />
+          <h3>{{site.data.hoe-wij-werken.waarde-1-titel}}</h3>
+          {{site.data.hoe-wij-werken.waarde-1-tekst | markdownify}}
+        </div>
+        <div class="waardes">
+          <img src="{{site.data.hoe-wij-werken.waarde-2-afbeelding}}" alt="" />
+          <h3>{{site.data.hoe-wij-werken.waarde-2-titel}}</h3>
+          {{site.data.hoe-wij-werken.waarde-2-tekst | markdownify}}
+        </div>
+        <div class="waardes">
+          <img src="{{site.data.hoe-wij-werken.waarde-3-afbeelding}}" alt="" />
+          <h3>{{site.data.hoe-wij-werken.waarde-3-titel}}</h3>
+          {{site.data.hoe-wij-werken.waarde-3-tekst | markdownify}}
+        </div>
       </div>
-      <div class="waardes">
-        <img src="{{site.data.hoe-wij-werken.waarde-2-afbeelding}}" alt="" />
-        <h3>{{site.data.hoe-wij-werken.waarde-2-titel}}</h3>
-        {{site.data.hoe-wij-werken.waarde-2-tekst | markdownify}}
-      </div>
-      <div class="waardes">
-        <img src="{{site.data.hoe-wij-werken.waarde-3-afbeelding}}" alt="" />
-        <h3>{{site.data.hoe-wij-werken.waarde-3-titel}}</h3>
-        {{site.data.hoe-wij-werken.waarde-3-tekst | markdownify}}
+      <div class="wijzijn-flex wijzijn-flex-2">
+        <div class="waardes waarde-4">
+          <img src="{{site.data.hoe-wij-werken.waarde-4-afbeelding}}" alt="" />
+          <h3>{{site.data.hoe-wij-werken.waarde-4-titel}}</h3>
+          {{site.data.hoe-wij-werken.waarde-4-tekst | markdownify}}
+        </div>
+        <div class="waardes">
+          <img src="{{site.data.hoe-wij-werken.waarde-5-afbeelding}}" alt="" />
+          <h3>{{site.data.hoe-wij-werken.waarde-5-titel}}</h3>
+          {{site.data.hoe-wij-werken.waarde-5-tekst | markdownify}}
+        </div>
       </div>
     </div>
   </div>
