--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@ title: Human Connection
           {{site.data.home.wat-wij-doen-1-tekst | markdownify}}
           {{site.data.home.wat-wij-doen-1-contact | markdownify}}
           <p class="btn btn-outline">
-            <a href="#">{{site.data.home.wat-wij-doen-1-button}}</a>
+            <a href="/team/sjef-van-gool/"
+              >{{site.data.home.wat-wij-doen-1-button}}</a
+            >
           </p>
         </div>
         <div>
@@ -67,7 +69,9 @@ title: Human Connection
           {{site.data.home.wat-wij-doen-2-tekst | markdownify}}
           {{site.data.home.wat-wij-doen-2-contact | markdownify}}
           <p class="btn btn-outline">
-            <a href="#">{{site.data.home.wat-wij-doen-2-button}}</a>
+            <a href="/team/meggie-van-de-bunt/"
+              >{{site.data.home.wat-wij-doen-2-button}}</a
+            >
           </p>
         </div>
         <div>
@@ -75,13 +79,17 @@ title: Human Connection
           {{site.data.home.wat-wij-doen-3-tekst | markdownify}}
           {{site.data.home.wat-wij-doen-3-contact | markdownify}}
           <p class="btn btn-outline">
-            <a href="">{{site.data.home.wat-wij-doen-3-button}}</a>
+            <a href="/team/marit-weiss/"
+              >{{site.data.home.wat-wij-doen-3-button}}</a
+            >
           </p>
         </div>
       </div>
       <div class="centered">
         <p class="btn btn-full">
-          <a href="#">{{site.data.home.hoe-wij-werken}}</a>
+          <a href="{{site.data.nav.hoe-wij-werken}}"
+            >{{site.data.home.hoe-wij-werken}}</a
+          >
         </p>
       </div>
     </div>
