--- a/index.html
+++ b/index.html
@@ -127,7 +127,9 @@ title: Human Connection
         <h2>{{site.data.home.actievraag}}</h2>
         <p class="ontdek">{{site.data.home.actievraag-subtitel}}</p>
         <p class="btn btn-full">
-          <a href="#">{{site.data.home.actievraag-button}}</a>
+          <a href="{{site.data.nav.contact}}"
+            >{{site.data.home.actievraag-button}}</a
+          >
         </p>
       </div>
     </div>
