--- a/hoe-wij-werken.html
+++ b/hoe-wij-werken.html
@@ -23,7 +23,7 @@ title: Hoe wij werken
       %}
     </div>
   </div>
-  <div class="vision">
+  <div class="vision p-breed">
     <h2>{{site.data.hoe-wij-werken.waar-wij-voor-staan}}</h2>
     {{site.data.hoe-wij-werken.waar-wijvoor-staan-tekst | markdownify}}
   </div>
