--- a/team.html
+++ b/team.html
@@ -3,6 +3,7 @@ layout: default
 title: Team
 ---
 
+{% include button-omhoog.html %}
 <h2 class="wiewijzijntitle">{{site.data.home.wie-wij-zijn}}</h2>
 {% for member in site.team %}
 <div class="photo">
