--- a/wat-wij-doen.html
+++ b/wat-wij-doen.html
@@ -4,6 +4,7 @@ title: Wat wij doen
 ---
 
 <main>
+  {% include button-omhoog.html %}
   <div class="watwijdoen padding-top-large blue-shadow">
     <h2>{{site.data.home.wat-wij-doen}}</h2>
     {{site.data.home.wat-wij-doen-tekst | markdownify}}
