--- a/werken-bij.html
+++ b/werken-bij.html
@@ -5,7 +5,7 @@ title: Werken bij
 
 <main>
   {% include button-omhoog.html %}
-  <div class="landing landing--werken-bij Lichtblauw">
+  <div class="landing landing--yellow bg-geel">
     <div class="innercontainer innercontainer--werken-bij">
       <div class="landing-content">
         <h1>{{site.data.werken-bij-ons.title}}</h1>
@@ -19,8 +19,7 @@ title: Werken bij
         src="{{site.data.werken-bij-ons.pagina-afbeelding}}"
         alt=""
       />
-      {% include svg1-lightblue.html %} {% include svg1-desktop-lightblue.html
-      %}
+      {% include svg1-yellow.html %} {% include svg1-desktop-yellow.html %}
     </div>
   </div>
   <div class="innercontainer--werken-bij">
