--- a/wie-wij-zijn.html
+++ b/wie-wij-zijn.html
@@ -3,6 +3,7 @@ layout: default
 title: Werken bij
 ---
 
+{% include button-omhoog.html %}
 <div class="wiewijzijn margin-top-6">
   <div class="innercontainer">
     <h2 class="wiewijzijntitle">{{site.data.home.wie-wij-zijn}}</h2>
